--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,8 +11,6 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: validate
-  kafka:
-    bootstrap-servers: localhost:9092
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.LongSerializer
-      value-serializer: com.andrbezr2016.tariffs.kafka.ProductNotificationSerializer
+tariffs-service:
+  client:
+    products-service-url: http://localhost:8081
