--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,4 +13,4 @@ spring:
       ddl-auto: validate
 tariffs-service:
   client:
-    products-service-url: http://localhost:8081
+    products-service-url: ${PRODUCTS_SERVICE_PATH:http://localhost:8081}
